make validation for index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>bleckcleaning</title>
 
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,600,700|Roboto:300&display=swap&subset=cyrillic-ext" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,600,700%7CRoboto:300&display=swap&subset=cyrillic-ext" rel="stylesheet">
 
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
@@ -205,15 +205,12 @@
 				<div class="col-md-6">
 					<form action="phpmailer/mail.php" method="POST" class="form">
 						<div class="form__input form__input--name">
-							<!-- <input name="user_name" type="text" placeholder="Введите Ваше имя" class="form__input--text-one"> -->
 							<input name="user_name" type="text" placeholder="Ваше имя" class="form__input--text-two">
 						</div>
 						<div class="form__input form__input--tel">
-							<!-- <input name="user_tel" type="tel" placeholder="Введите Ваш телефон" class="form__input--text-one"> -->
 							<input name="user_tel" type="tel" placeholder="Ваш телефон" class="form__input--text-two" required>
 						</div>
 						<div class="form__input form__input--email">
-							<!-- <input name="user_email" type="email" placeholder="Введите Ваш e-mail" class="form__input--text-one"> -->
 							<input name="user_email" type="email" placeholder="Ваш e-mail" class="form__input--text-two">
 						</div>
 						<button type="submit" class="form__button"><span class="form__button--text-one">Расчитать стоимость</span> <span class="form__button--text-two">Заказать</span></button>
