--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 						<div class="contacts__sub d-none d-md-block">Звоните с 09:00 до 20:00</div>
 						<div class="contacts__mail">wwbleckclean@mail.ru</div>
 						<div class="contacts__sub d-none d-md-block">Пишите круглосуточно</div>
-						<!-- <div class="contacts__text d-none d-md-block"><a href="https://www.instagram.com/bleckclean/?igshid=1u6dduihdh3y6" class=""><span class="span icon-instagram-logo contacts__link"></span>Мы в instagram</a></div> -->
+						<div class="contacts__text d-none d-md-block"><span class="span icon-instagram-logo contacts__link"></span>Мы в instagram</div>
 							
 					</address>
 				</div>
