--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>bleckcleaning</title>
-
+	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,600,700%7CRoboto:300&display=swap&subset=cyrillic-ext" rel="stylesheet">
 
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
