--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>bleckcleaning</title>
+	<title>bleckcleaning - профессиональный клининг в Москве с 2007 года</title>
 	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,600,700%7CRoboto:300&display=swap&subset=cyrillic-ext" rel="stylesheet">
 
