fixed selector classes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="nav__tel d-lg-none">8(495)088-37-88 <br>8(915)441-23-41</div>
+				<div class="nav__tel d-lg-none"><a href="tel:+7(495)088-37-88" class="nav__tel nav__tel--link">+7(495)088-37-88</ a><br><a href="tel:+7(915)441-23-41" class="nav__tel nav__tel--link">+7(915)441-23-41</ a>+7(915)441-23-41</div>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
@@ -74,15 +74,15 @@
 			<div class="row about__row">
 				<div class="col-sm-6">
 					<span class="icon-brush about__icon"></span>
-					<p class="about__text">Мы специализируемся на уборке квартир, коттеджей и офисов, знаем строгие <span class="about__title--orange">требования</span> наших клиентов и умеем их выполнять.&#160;<span class="tilda">~</span></p>
+					<p class="about__text">Мы специализируемся на уборке квартир, коттеджей и офисов, знаем строгие <span class="about__title about__title--orange">требования</span> наших клиентов и умеем их выполнять.&#160;<span class="tilda">~</span></p>
 				</div>
 				<div class="col-sm-6 about__col about__col--two">
 					<span class="icon-family about__icon"></span>
-					<p class="about__text">Мы <span class="about__title--orange">профессионально</span> занимаемся уборкой в Москве и Московской области с 2007 года. За это время мы убрали для Вас более 10000 тыс. м2&#160;<span class="tilda">~</span></p>
+					<p class="about__text">Мы <span class="about__title about__title--orange">профессионально</span> занимаемся уборкой в Москве и Московской области с 2007 года. За это время мы убрали для Вас более 10000 тыс. м2&#160;<span class="tilda">~</span></p>
 				</div>
 				<div class="col about__col about__col--three">
 					<span class="icon-room about__icon about__icon--room"></span>
-					<p class="about__text">Каждый день уборку у себя дома компании  "Блеск" <span class="about__title--orange">доверяют</span> десятки московских семей.&#160;<span class="tilda">~</span></p>
+					<p class="about__text">Каждый день уборку у себя дома компании  "Блеск" <span class="about__title about__title--orange">доверяют</span> десятки московских семей.&#160;<span class="tilda">~</span></p>
 				</div>
 			</div>
 		</div>
@@ -219,9 +219,9 @@
 				<div class="offset-md-1 col-md-5">
 					<address class="contacts">
 						<div class="contacts__title d-none d-md-block">Как с нами связаться:</div>
-						<div class="contacts__tel">8(495)<span class="contacts__tel--bold">088-37-88</span></div>
+						<div class="contacts__tel"><a href="tel:+7(495)088-37-88" class="contacts__tel contacts__tel--link">8(495)<span class="contacts__tel--bold">088-37-88</span></a></div>
 						<div class="contacts__sub d-none d-md-block">Звоните с 09:00 до 20:00</div>
-						<div class="contacts__mail">wwbleckclean@mail.ru</div>
+						<div class="contacts__mail"><a href="mailto:wwbleckclean@mail.ru" class="contacts__mail contacts__mail--link">wwbleckclean@mail.ru</a></div>
 						<div class="contacts__sub d-none d-md-block">Пишите круглосуточно</div>
 						<div class="contacts__text d-none d-md-block"><span class="span icon-instagram-logo contacts__link"></span>Мы в instagram</div>
 							
