--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="nav__tel d-lg-none"><a href="tel:+7(495)088-37-88" class="nav__tel nav__tel--link">+7(495)088-37-88</ a><br><a href="tel:+7(915)441-23-41" class="nav__tel nav__tel--link">+7(915)441-23-41</ a>+7(915)441-23-41</div>
+				<div class="nav__tel d-lg-none"><a href="tel:+7(495)088-37-88" class="nav__tel nav__tel--link">+7(495)088-37-88</ a><br><a href="tel:+7(915)441-23-41" class="nav__tel nav__tel--link">+7(915)441-23-41</a></div>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
